--- a/beamer/conclusion.tex
+++ b/beamer/conclusion.tex
@@ -1,5 +1,6 @@
 \begin{frame}<beamer>
-  \frametitle{Perspective}
+\frametitle{Perspective}
+contributeurs
 \end{frame}
 %------------------------------------------------------------------------------
 \begin{frame}<beamer>
