vfill entre boxs

--- a/beamer/partie1.tex
+++ b/beamer/partie1.tex
@@ -28,6 +28,7 @@
   \item Assister l'utilisateur
  \end{itemize}
 \end{beamerboxesrounded}
+	\vfill
 \begin{beamerboxesrounded}{Inconvénients}
  \begin{itemize}
   \item Dépendant de l'OS
@@ -38,15 +39,24 @@
 %------------------------------------------------------------------------------
 \subsection{IzPack}
 \begin{frame}\frametitle{IzPack}
-\begin{beamerboxesrounded}{Language}
-	Java
-\end{beamerboxesrounded}
-\begin{beamerboxesrounded}{But}
-	Déporter la création l'installateur
-\end{beamerboxesrounded}
-\begin{beamerboxesrounded}{Moyen}
-Descripteur XML
-\end{beamerboxesrounded}
+\begin{minipage}[c]{.46\linewidth}
+	\begin{beamerboxesrounded}{Language}
+		Java
+	\end{beamerboxesrounded}
+\end{minipage}
+\hfill
+\begin{minipage}[c]{.46\linewidth}
+	\begin{beamerboxesrounded}{But}
+		Déporter la création l'installateur
+	\end{beamerboxesrounded}
+\end{minipage}
+\vfill
+\hfil
+\begin{minipage}[c]{.46\linewidth}
+	\begin{beamerboxesrounded}{Moyen}
+	Descripteur XML
+	\end{beamerboxesrounded}
+\end{minipage}
 % \begin{beamerboxesrounded}{Générateur d'installateur}
 % 	\begin{itemize}
 % 		\item Ecrit en Java
@@ -60,9 +70,11 @@ Descripteur XML
 	\begin{beamerboxesrounded}{Multiplateforme}
 	Windows, Mac, BSD, Linux
 	\end{beamerboxesrounded}
+	\vfill
 	\begin{beamerboxesrounded}{Personnalisable}
 	Descripteur XML contrôlant l'aspect
 	\end{beamerboxesrounded}
+	\vfill
 	\begin{beamerboxesrounded}{Open-Source}
 	License business-friendly Apache 2
 	\end{beamerboxesrounded}
