--- a/beamer/beamer.tex
+++ b/beamer/beamer.tex
@@ -71,13 +71,13 @@
 \tableofcontents
 \end{frame}
 %------------------------------------------------------------
-\section{titre partie 1}
+\section{Description du problème}
 \input{partie1}
 %------------------------------------------------------------
-\section{titre partie 2}
+\section{Réponse au problème}
 \input{partie2}
 %------------------------------------------------------------
-\section{titre partie 3}
+\section{Réalisation de la solution}
 \input{partie3}
 %------------------------------------------------------------
 \section*{Conclusion}
