--- a/beamer/partie3.tex
+++ b/beamer/partie3.tex
@@ -18,10 +18,10 @@
 sora, tu en parleras mieux que moi
 \end{frame}
 %------------------------------------------------------------------------------
-\begin{frame}\frametitle{Numéros de ligne}
-\begin{beamerboxesrounded}[shadow=true]{Critères importants dans IzPack}
+\begin{frame}[fragile]\frametitle{Numéros de ligne}
+\begin{beamerboxesrounded}[shadow=true]{Crit\`eres importants dans IzPack}
 \begin{itemize}
-	\item Sans signification en théorie (DOM)\\
+	\item Sans signification en th\'eorie (DOM)\\
 	~\\
 	\item Utile en pratique\\
 	~\\
