--- a/beamer/partie1.tex
+++ b/beamer/partie1.tex
@@ -9,7 +9,7 @@
 \end{frame}
 %------------------------------------------------------------------------------
 \begin{frame}[fragile]\frametitle{Installation de Glassfish}
-\begin{beamerboxesrounded}{Proc\'edure d'installation de Glassfish-v2}
+\begin{beamerboxesrounded}[shadow=true]{Proc\'edure d'installation de Glassfish-v2}
 	\begin{verbatim}
 	java -Xmx256m -jar glassfish-installer-v2.1.jar;
 	cd glassfish;
@@ -21,7 +21,7 @@
 \end{frame}
 %------------------------------------------------------------------------------
 \begin{frame}\frametitle{Installateur logiciel}
-\begin{beamerboxesrounded}{But}
+\begin{beamerboxesrounded}[shadow=true]{But}
  \begin{itemize}
   \item Automatiser les procèdures d'installation
   \item Assurer une intégration dans le système
@@ -29,7 +29,7 @@
  \end{itemize}
 \end{beamerboxesrounded}
 	\vfill
-\begin{beamerboxesrounded}{Inconvénients}
+\begin{beamerboxesrounded}[shadow=true]{Inconvénients}
  \begin{itemize}
   \item Dépendant de l'OS
   \item Création de l'interface graphique lourde
@@ -40,24 +40,24 @@
 \subsection{IzPack}
 \begin{frame}\frametitle{IzPack}
 \begin{minipage}[c]{.46\linewidth}
-	\begin{beamerboxesrounded}{Language}
+	\begin{beamerboxesrounded}[shadow=true]{Language}
 		Java
 	\end{beamerboxesrounded}
 \end{minipage}
 \hfill
 \begin{minipage}[c]{.46\linewidth}
-	\begin{beamerboxesrounded}{But}
+	\begin{beamerboxesrounded}[shadow=true]{But}
 		Déporter la création l'installateur
 	\end{beamerboxesrounded}
 \end{minipage}
 \vfill
 \hfil
 \begin{minipage}[c]{.46\linewidth}
-	\begin{beamerboxesrounded}{Moyen}
+	\begin{beamerboxesrounded}[shadow=true]{Moyen}
 	Descripteur XML
 	\end{beamerboxesrounded}
 \end{minipage}
-% \begin{beamerboxesrounded}{Générateur d'installateur}
+% \begin{beamerboxesrounded}[shadow=true]{Générateur d'installateur}
 % 	\begin{itemize}
 % 		\item Ecrit en Java
 % 		\item Déporte la création l'installateur
@@ -67,15 +67,15 @@
 \end{frame}
 %------------------------------------------------------------------------------
 \begin{frame}\frametitle{Caractéristiques}
-	\begin{beamerboxesrounded}{Multiplateforme}
+	\begin{beamerboxesrounded}[shadow=true]{Multiplateforme}
 	Windows, Mac, BSD, Linux
 	\end{beamerboxesrounded}
 	\vfill
-	\begin{beamerboxesrounded}{Personnalisable}
-	Descripteur XML contrôlant l'aspect
+	\begin{beamerboxesrounded}[shadow=true]{Personnalisable}
+	Descripteur XML contrôlant l'aspect et la logique
 	\end{beamerboxesrounded}
 	\vfill
-	\begin{beamerboxesrounded}{Open-Source}
+	\begin{beamerboxesrounded}[shadow=true]{Open-Source}
 	License business-friendly Apache 2
 	\end{beamerboxesrounded}
 \end{frame}
@@ -83,7 +83,7 @@
 %------------------------------------------------------------------------------
 \subsection{Problèmes}
 \begin{frame}\frametitle{Problèmes}
-	\begin{beamerboxesrounded}{NanoXML obsolète}
+	\begin{beamerboxesrounded}[shadow=true]{NanoXML obsolète}
 		\begin{itemize}
 		\item Bugs connus
 		\item Foncionnalités manquantes
