--- a/beamer/partie1.tex
+++ b/beamer/partie1.tex
@@ -40,46 +40,40 @@
 \subsection{IzPack}
 \begin{frame}\frametitle{IzPack}
 \begin{minipage}[c]{.46\linewidth}
-	\begin{beamerboxesrounded}[shadow=true]{Language}
-		Java
+	\begin{beamerboxesrounded}[shadow=true]{Multiplateforme}
+		\begin{itemize}
+		\item Java 1.5
+		\item Windows, Mac, BSD, Linux...
+		\end{itemize}
 	\end{beamerboxesrounded}
 \end{minipage}
 \hfill
 \begin{minipage}[c]{.46\linewidth}
 	\begin{beamerboxesrounded}[shadow=true]{But}
-		Déporter la création l'installateur
+		\begin{itemize}
+		\item Déporter la création l'installateur
+		\end{itemize}
 	\end{beamerboxesrounded}
 \end{minipage}
 \vfill
-\hfil
 \begin{minipage}[c]{.46\linewidth}
-	\begin{beamerboxesrounded}[shadow=true]{Moyen}
-	Descripteur XML
+	\begin{beamerboxesrounded}[shadow=true]{Personnalisable}
+		\begin{itemize}
+		\item Descripteur XML 
+		\item contrôle l'aspect et la logique
+		\end{itemize}
 	\end{beamerboxesrounded}
 \end{minipage}
-% \begin{beamerboxesrounded}[shadow=true]{Générateur d'installateur}
-% 	\begin{itemize}
-% 		\item Ecrit en Java
-% 		\item Déporte la création l'installateur
-% 		\item Création basé sur descripteur XML
-% 	\end{itemize}
-% \end{beamerboxesrounded}
-\end{frame}
-%------------------------------------------------------------------------------
-\begin{frame}\frametitle{Caractéristiques}
-	\begin{beamerboxesrounded}[shadow=true]{Multiplateforme}
-	Windows, Mac, BSD, Linux
-	\end{beamerboxesrounded}
-	\vfill
-	\begin{beamerboxesrounded}[shadow=true]{Personnalisable}
-	Descripteur XML contrôlant l'aspect et la logique
-	\end{beamerboxesrounded}
-	\vfill
+\hfill
+\begin{minipage}[c]{.46\linewidth}
 	\begin{beamerboxesrounded}[shadow=true]{Open-Source}
-	License business-friendly Apache 2
+		\begin{itemize}
+		\item License Apache 2
+		\item Projet Membre de Codehaus
+		\end{itemize}
 	\end{beamerboxesrounded}
+\end{minipage}
 \end{frame}
-
 %------------------------------------------------------------------------------
 \subsection{Problèmes}
 \begin{frame}\frametitle{Problèmes}
