--- a/beamer/partie2.tex
+++ b/beamer/partie2.tex
@@ -1,3 +1,13 @@
+\subsection{Utilisation de NanoXML}
+\begin{frame}\frametitle{Utilisation de NanoXML}
+\begin{beamerboxesrounded}[shadow=true]{Utilisation principales}
+ \begin{itemize}
+  \item XMLParser : 10 fois
+  \item XMLWriter : 8 fois
+  \item XMLElement : 499 fois
+ \end{itemize}
+\end{beamerboxesrounded}
+\end{frame}
 %------------------------------------------------------------------------------
 \subsection{Solutions possibles}
 \begin{frame}\frametitle{Solutions possibles}
