--- a/beamer/partie1.tex
+++ b/beamer/partie1.tex
@@ -23,7 +23,7 @@
 \begin{frame}\frametitle{Installateur logiciel}
 \begin{beamerboxesrounded}{But}
  \begin{itemize}
-  \item Automatiser les procèdures d'installation
+  \item Automatiser les procédures d'installation
   \item Assurer une intégration dans le système
   \item Assister l'utilisateur
  \end{itemize}
