--- a/beamer/partie2.tex
+++ b/beamer/partie2.tex
@@ -1,5 +1,17 @@
 %------------------------------------------------------------------------------
 \subsection{Solutions possibles}
+
+% c'est bizarre de le mettre là...
+\begin{frame}\frametitle{Parties touchées par le champignon NanoXMLus deprecatus}
+\begin{beamerboxesrounded}[shadow=true]{Utilisation de NanoXML}
+\begin{itemize}
+	\item 3 Classes\\
+	~\\
+	\item 499 Utilisations
+\end{itemize}
+\end{beamerboxesrounded}
+\end{frame}
+%------------------------------------------------------------------------------
 \begin{frame}\frametitle{Solutions possibles}
 \begin{minipage}[c]{.46\linewidth}
 \begin{beamerboxesrounded}[shadow=true]{Modification du code}
@@ -13,7 +25,7 @@
 \begin{minipage}[c]{.46\linewidth}
 \begin{beamerboxesrounded}[shadow=true]{Changement de langage}
 \begin{itemize}
-	\item Changer de langage descriptif
+	\item Abandonner le XML pour un autre langage
 \end{itemize}
 \end{beamerboxesrounded}
 \end{minipage}
