--- a/beamer/partie3.tex
+++ b/beamer/partie3.tex
@@ -1,31 +1,54 @@
 %------------------------------------------------------------------------------
 \subsection{Transition}
+% premier jet, A REVOIR !
 \begin{frame}\frametitle{Patron de conception adaptateur}
-
+\begin{minipage}[c]{.46\linewidth}
+\begin{beamerboxesrounded}[shadow=true]{Avant}
+	\includegraphics[width=.9\linewidth]{../image/sol_casInitial.png}
+\end{beamerboxesrounded}
+\end{minipage}
+\hfill
+\begin{minipage}[c]{.46\linewidth}
+\begin{beamerboxesrounded}[shadow=true]{Après}
+	\includegraphics[width=.9\linewidth]{../image/sol_extractionInterface.png}
+\end{beamerboxesrounded}
+\end{minipage}
 \end{frame}
 %------------------------------------------------------------------------------
 \subsection{Tests}
-\begin{frame}\frametitle{Tests unitaires}
-
-\end{frame}
-%------------------------------------------------------------------------------
-\begin{frame}\frametitle{Tests fonctionnels}
-
-\end{frame}
-%------------------------------------------------------------------------------
-\subsection{Points principaux}
-\begin{frame}\frametitle{Xinclude}
-sora, tu en parleras mieux que moi
-\end{frame}
-%------------------------------------------------------------------------------
-\begin{frame}[fragile]\frametitle{Numéros de ligne}
-\begin{beamerboxesrounded}[shadow=true]{Crit\`eres importants dans IzPack}
+\begin{frame}\frametitle{Tests unitaires et fonctionnels}
+\begin{minipage}[c]{.9\linewidth}
+\begin{beamerboxesrounded}[shadow=true]{Tests unitaires}
 \begin{itemize}
-	\item Sans signification en th\'eorie (DOM)\\
+	\item Assurent un comportement identique\\
 	~\\
-	\item Utile en pratique\\
+	\item Testent de nombreux cas\\
 	~\\
-	\item Utilisation de SAX et d'un \verb|Transformer|
+	\item Couvrent toutes les méthodes\\
+\end{itemize}
+\end{beamerboxesrounded}
+\end{minipage}
+\vfill
+\begin{minipage}[c]{.9\linewidth}
+\begin{beamerboxesrounded}[shadow=true]{Tests fonctionnels}
+\begin{itemize}
+	\item IzPack\\
+	~\\
+	\item Glassfish
+\end{itemize}
+\end{beamerboxesrounded}
+\end{minipage}
+\end{frame}
+%------------------------------------------------------------------------------
+
+% pas sûr de l'utilité si seulement 2 items...
+\subsection{Principaux problèmes rencontrés}
+\begin{frame}\frametitle{Principaux problèmes rencontrés}
+\begin{beamerboxesrounded}[shadow=true]{Principaux problèmes rencontrés}
+\begin{itemize}
+	\item Xinclude\\
+	~\\
+	\item Numéros de ligne
 \end{itemize}
 \end{beamerboxesrounded}
 \end{frame}
