--- a/beamer/partie1.tex
+++ b/beamer/partie1.tex
@@ -28,7 +28,7 @@
   \item Assister l'utilisateur
  \end{itemize}
 \end{beamerboxesrounded}
-	\vfill
+\vfill
 \begin{beamerboxesrounded}[shadow=true]{Inconvénients}
  \begin{itemize}
   \item Dépendant de l'OS
@@ -40,18 +40,18 @@
 \subsection{IzPack}
 \begin{frame}\frametitle{IzPack}
 \begin{minipage}[c]{.46\linewidth}
-	\begin{beamerboxesrounded}[shadow=true]{Multiplateforme}
+	\begin{beamerboxesrounded}[shadow=true]{But}
 		\begin{itemize}
-		\item Java 1.5
-		\item Windows, Mac, BSD, Linux...
+		\item Déporter la création l'installateur
 		\end{itemize}
 	\end{beamerboxesrounded}
 \end{minipage}
 \hfill
 \begin{minipage}[c]{.46\linewidth}
-	\begin{beamerboxesrounded}[shadow=true]{But}
+	\begin{beamerboxesrounded}[shadow=true]{Multiplateforme}
 		\begin{itemize}
-		\item Déporter la création l'installateur
+		\item Java 1.5
+		\item Windows, Mac, BSD, Linux...
 		\end{itemize}
 	\end{beamerboxesrounded}
 \end{minipage}
@@ -84,10 +84,13 @@
 		\item Développement arrété
 		\end{itemize}
 	\end{beamerboxesrounded}
-	\begin{itemize}
-		\item Invisible pour l'utilisateur
-		\item Génant pour le développeur	
-	\end{itemize}
+	\vfill
+	\begin{beamerboxesrounded}[shadow=true]{Conséquences}
+		\begin{itemize}
+			\item Invisible pour l'utilisateur
+			\item Génant pour le développeur	
+		\end{itemize}
+	\end{beamerboxesrounded}
 \end{frame}
 %------------------------------------------------------------------------------
 \begin{frame}\frametitle{Problèmes}
