Correction partie2 et ajout partie 3

--- a/beamer/partie3.tex
+++ b/beamer/partie3.tex
@@ -1,3 +1,35 @@
+\subsection{Environnement de travail}
+\begin{frame}\frametitle{Environnement de travail}
+\begin{minipage}[c]{.46\linewidth}
+	\begin{beamerboxesrounded}[shadow=true,center]{Gestionnaire de version}
+		\centering
+		\includegraphics[width=.4\linewidth]{../image/gitLogo.png}
+		\includegraphics[width=.3\linewidth]{../image/githubLogo.png}
+	\end{beamerboxesrounded}
+\end{minipage}
+\hfill
+\begin{minipage}[c]{.46\linewidth}
+\begin{beamerboxesrounded}[shadow=true]{Gestion de projet}
+	\centering
+	\includegraphics[width=.7\linewidth]{../image/lighthouseLogo.png}
+\end{beamerboxesrounded}
+\end{minipage}
+\vfill
+\hfil
+\begin{minipage}[c]{.6\linewidth}
+\begin{beamerboxesrounded}[shadow=true]{Environnement de développement}
+	\centering
+	\includegraphics[width=.4\linewidth]{../image/intellijLogo.png}
+\end{beamerboxesrounded}
+\end{minipage}
+\end{frame}
+%------------------------------------------------------------------------------
+\begin{frame}\frametitle{Méthodologie agile}
+\begin{itemize}
+ \item 
+\end{itemize}
+
+\end{frame}
 %------------------------------------------------------------------------------
 \subsection{Transition}
 % premier jet, A REVOIR !
