--- a/beamer/partie1.tex
+++ b/beamer/partie1.tex
@@ -9,7 +9,12 @@
 \end{frame}
 %------------------------------------------------------------------------------
 \begin{frame}[fragile]\frametitle{Installation de Glassfish}
+
+\centering
+\includegraphics[width=.3\linewidth]{../image/glassfishLogo.png}
+\vfill
 \begin{beamerboxesrounded}[shadow=true]{Proc\'edure d'installation de Glassfish-v2}
+	
 	\begin{verbatim}
 	java -Xmx256m -jar glassfish-installer-v2.1.jar;
 	cd glassfish;
