mise en forme partie UML

--- a/beamer/conclusion.tex
+++ b/beamer/conclusion.tex
@@ -1,10 +1,19 @@
-\begin{frame}<beamer>
-\frametitle{Perspective}
-contributeurs
-\end{frame}
 %------------------------------------------------------------------------------
 \begin{frame}<beamer>
 \frametitle{Conclusion}
+\begin{beamerboxesrounded}[shadow=true]{XML dans IzPack}
+\begin{itemize}
+	\item NanoXML supprimé
+	\item JAXP et ses avantages ajouté
+\end{itemize}
+\end{beamerboxesrounded}
+\vfill
+\begin{beamerboxesrounded}[shadow=true]{Contributeurs}
+\begin{itemize}
+	\item Suivi des apports
+	\item Amélioration de IzPack
+\end{itemize}
+\end{beamerboxesrounded}
 \end{frame}
 %------------------------------------------------------------------------------
 \begin{frame}<beamer>\frametitle{Fin de l'exposé}
