--- a/beamer/partie2.tex
+++ b/beamer/partie2.tex
@@ -1,6 +1,6 @@
 \subsection{Utilisation de NanoXML}
 \begin{frame}\frametitle{Utilisation de NanoXML}
-\begin{beamerboxesrounded}[shadow=true]{Utilisation principales}
+\begin{beamerboxesrounded}[shadow=true]{Utilisations principales}
  \begin{itemize}
   \item XMLParser : 10 fois
   \item XMLWriter : 8 fois
@@ -10,18 +10,6 @@
 \end{frame}
 %------------------------------------------------------------------------------
 \subsection{Solutions possibles}
-
-% c'est bizarre de le mettre là...
-\begin{frame}\frametitle{Parties touchées par le champignon NanoXMLus deprecatus}
-\begin{beamerboxesrounded}[shadow=true]{Utilisation de NanoXML}
-\begin{itemize}
-	\item 3 Classes\\
-	~\\
-	\item 499 Utilisations
-\end{itemize}
-\end{beamerboxesrounded}
-\end{frame}
-%------------------------------------------------------------------------------
 \begin{frame}\frametitle{Solutions possibles}
 \begin{minipage}[c]{.46\linewidth}
 \begin{beamerboxesrounded}[shadow=true]{Modification du code}
