--- a/beamer/partie3.tex
+++ b/beamer/partie3.tex
@@ -3,14 +3,24 @@
 % premier jet, A REVOIR !
 \begin{frame}\frametitle{Patron de conception adaptateur}
 \begin{minipage}[c]{.46\linewidth}
-\begin{beamerboxesrounded}[shadow=true]{Avant}
-	\includegraphics[width=.9\linewidth]{../image/sol_casInitial.png}
+\begin{beamerboxesrounded}[shadow=true]{Cas initial}
+	\centering
+	\includegraphics[height=80px]{../image/sol_casInitialAlpha.png}
 \end{beamerboxesrounded}
 \end{minipage}
 \hfill
 \begin{minipage}[c]{.46\linewidth}
-\begin{beamerboxesrounded}[shadow=true]{Après}
-	\includegraphics[width=.9\linewidth]{../image/sol_extractionInterface.png}
+\begin{beamerboxesrounded}[shadow=true]{Extraction de l'interface}
+	\centering
+	\includegraphics[height=80px]{../image/sol_extractionInterfaceAlpha.png}
+\end{beamerboxesrounded}
+\end{minipage}
+\vfill
+\hfil
+\begin{minipage}[c]{.80\linewidth}
+\begin{beamerboxesrounded}[shadow=true]{Implémentation}
+	\centering
+	\includegraphics[height=80px]{../image/sol_implementationAlpha.png}
 \end{beamerboxesrounded}
 \end{minipage}
 \end{frame}
