Images + partie agile dev

--- a/beamer/partie3.tex
+++ b/beamer/partie3.tex
@@ -25,10 +25,8 @@
 \end{frame}
 %------------------------------------------------------------------------------
 \begin{frame}\frametitle{Méthodologie agile}
-\begin{itemize}
- \item 
-\end{itemize}
-
+\vfill
+\includegraphics[width=1\linewidth]{../image/agileDev.png}
 \end{frame}
 %------------------------------------------------------------------------------
 \subsection{Transition}
