--- a/beamer/conclusion.tex
+++ b/beamer/conclusion.tex
@@ -21,3 +21,9 @@
 Merci de votre attention.
 \end{center}
 \end{frame}
+%------------------------------------------------------------------------------
+\begin{frame}<beamer>\frametitle{Questions}
+\begin{center}
+Question?
+\end{center}
+\end{frame}
