Suppression des interlignes

--- a/beamer/partie2.tex
+++ b/beamer/partie2.tex
@@ -43,13 +43,10 @@
 \begin{frame}\frametitle{Critères de sélection}
 \begin{beamerboxesrounded}[shadow=true]{Critères importants dans IzPack}
 \begin{itemize}
-	\item Taille de la librairie\\
-	~\\
-	\item Facilité d'utilisation\\
-	~\\
-	\item Transition\\
-	~\\
-	\item Evolution
+	\item Taille de la librairie
+	\item Facilité d'utilisation
+	\item Transition
+	\item \'Evolution
 \end{itemize}
 \end{beamerboxesrounded}
 \end{frame}
@@ -58,11 +55,9 @@
 \begin{frame}\frametitle{Solution la plus adaptée}
 \begin{beamerboxesrounded}[shadow=true]{JAXP}
 \begin{itemize}
-	\item Intégrée à la JRE\\
-	~\\
-	\item Spécification DOM\\
-	~\\
-	\item Evolution
+	\item Intégrée à la JRE
+	\item Spécification DOM
+	\item \'Evolution
 \end{itemize}
 \end{beamerboxesrounded}
 \end{frame}
