Suppression interligne et viré px

--- a/beamer/partie3.tex
+++ b/beamer/partie3.tex
@@ -35,14 +35,14 @@
 \begin{minipage}[c]{.46\linewidth}
 \begin{beamerboxesrounded}[shadow=true]{Cas initial}
 	\centering
-	\includegraphics[height=80px]{../image/sol_casInitialAlpha.png}
+	\includegraphics[height=.46\linewidth]{../image/sol_casInitialAlpha.png}
 \end{beamerboxesrounded}
 \end{minipage}
 \hfill
 \begin{minipage}[c]{.46\linewidth}
 \begin{beamerboxesrounded}[shadow=true]{Extraction de l'interface}
 	\centering
-	\includegraphics[height=80px]{../image/sol_extractionInterfaceAlpha.png}
+	\includegraphics[height=.46\linewidth]{../image/sol_extractionInterfaceAlpha.png}
 \end{beamerboxesrounded}
 \end{minipage}
 \vfill
@@ -50,7 +50,7 @@
 \begin{minipage}[c]{.80\linewidth}
 \begin{beamerboxesrounded}[shadow=true]{Implémentation}
 	\centering
-	\includegraphics[height=80px]{../image/sol_implementationAlpha.png}
+	\includegraphics[height=.46\linewidth]{../image/sol_implementationAlpha.png}
 \end{beamerboxesrounded}
 \end{minipage}
 \end{frame}
@@ -60,11 +60,8 @@
 \begin{minipage}[c]{.9\linewidth}
 \begin{beamerboxesrounded}[shadow=true]{Tests unitaires}
 \begin{itemize}
-	\item Assurent un comportement identique\\
-	~\\
-	\item Testent de nombreux cas\\
-	~\\
-	\item Couvrent toutes les méthodes\\
+	\item Assurent un comportement identique
+	\item Testent de nombreux cas
 \end{itemize}
 \end{beamerboxesrounded}
 \end{minipage}
@@ -72,8 +69,7 @@
 \begin{minipage}[c]{.9\linewidth}
 \begin{beamerboxesrounded}[shadow=true]{Tests fonctionnels}
 \begin{itemize}
-	\item IzPack\\
-	~\\
+	\item IzPack
 	\item Glassfish
 \end{itemize}
 \end{beamerboxesrounded}
@@ -86,9 +82,9 @@
 \begin{frame}\frametitle{Principaux problèmes rencontrés}
 \begin{beamerboxesrounded}[shadow=true]{Principaux problèmes rencontrés}
 \begin{itemize}
-	\item Xinclude\\
-	~\\
+	\item Xinclude
 	\item Numéros de ligne
+	\item Synchronisation des sources
 \end{itemize}
 \end{beamerboxesrounded}
 \end{frame}
