--- a/beamer/titlepage.tex
+++ b/beamer/titlepage.tex
@@ -26,7 +26,7 @@ David \textsc{Duponchel}\\
 % \large
 \small
 \emph{Encadrés par: }Julien \textsc{Ponge}\\
-{\today}
+% {\today}
 \end{flushright}
 \end{minipage}\\[1cm]
 \end{center}
