--- a/beamer/partie2.tex
+++ b/beamer/partie2.tex
@@ -1,12 +1,11 @@
 \subsection{Utilisation de NanoXML}
 \begin{frame}\frametitle{Utilisation de NanoXML}
-\begin{beamerboxesrounded}[shadow=true]{Utilisations principales}
- \begin{itemize}
-  \item XMLParser : 23 fois
-  \item XMLWriter : 8 fois
-  \item XMLElement : 499 fois
- \end{itemize}
-\end{beamerboxesrounded}
+Utilisations principales :
+\begin{itemize}
+	\item XMLParser : 23 fois
+	\item XMLWriter : 8 fois
+	\item XMLElement : 499 fois
+\end{itemize}
 \end{frame}
 %------------------------------------------------------------------------------
 \subsection{Solutions possibles}
@@ -39,26 +38,23 @@
 \end{minipage}
 \end{frame}
 %------------------------------------------------------------------------------
-\subsection{Critères de sélection}
+\subsection{Pertinence de la solution}
 \begin{frame}\frametitle{Critères de sélection}
-\begin{beamerboxesrounded}[shadow=true]{Critères importants dans IzPack}
+Critères importants dans IzPack :
 \begin{itemize}
 	\item Taille de la librairie
 	\item Facilité d'utilisation
 	\item Transition
-	\item \'Evolution
+	\item Évolution
 \end{itemize}
-\end{beamerboxesrounded}
 \end{frame}
 %------------------------------------------------------------------------------
-\subsection{Solution la plus adaptée}
 \begin{frame}\frametitle{Solution la plus adaptée}
-\begin{beamerboxesrounded}[shadow=true]{JAXP}
+JAXP :
 \begin{itemize}
 	\item Intégrée à la JRE
 	\item Spécification DOM
-	\item \'Evolution
+	\item Évolution
 \end{itemize}
-\end{beamerboxesrounded}
 \end{frame}
 %------------------------------------------------------------------------------
