--- a/beamer/partie3.tex
+++ b/beamer/partie3.tex
@@ -33,13 +33,6 @@
 \begin{frame}
 \frametitle{Patron de conception adaptateur}
 
-% \begin{minipage}[c]{.4\linewidth}
-% \begin{beamerboxesrounded}[shadow=true]{Cas initial}
-% 	\centering
-% 	\includegraphics[width=.8\linewidth]{../image/sansAdaptateur.png}
-% \end{beamerboxesrounded}
-% \end{minipage}
-% \hfill
 \begin{minipage}[c]{.3\linewidth}
 \begin{beamerboxesrounded}[shadow=true]{Représentation}
 	\centering
@@ -62,7 +55,7 @@
 \begin{beamerboxesrounded}[shadow=true]{Avantages}
 \begin{itemize}
 	\item conservation de l'interface de NanoXML
-	\item disparation de NanoXML
+	\item disparition de NanoXML
 \end{itemize}
 \end{beamerboxesrounded}
 \end{minipage}
@@ -70,7 +63,7 @@
 \end{frame}
 %------------------------------------------------------------------------------
 \subsection{Tests}
-\begin{frame}\frametitle{Tests unitaires et fonctionnels}
+\begin{frame}\frametitle{Tests effectués}
 \begin{minipage}[c]{.9\linewidth}
 \begin{beamerboxesrounded}[shadow=true]{Tests unitaires}
 \begin{itemize}
@@ -94,12 +87,11 @@
 % pas sûr de l'utilité si seulement 2 items...
 \subsection{Principaux problèmes rencontrés}
 \begin{frame}\frametitle{Principaux problèmes rencontrés}
-\begin{beamerboxesrounded}[shadow=true]{Principaux problèmes rencontrés}
+Principaux problèmes rencontrés :
 \begin{itemize}
+	\item Synchronisation des sources
 	\item Xinclude
 	\item Numéros de ligne
-	\item Synchronisation des sources
 \end{itemize}
-\end{beamerboxesrounded}
 \end{frame}
 %------------------------------------------------------------------------------
