--- a/beamer/introduction.tex
+++ b/beamer/introduction.tex
@@ -1,13 +1,11 @@
 \begin{frame}<beamer>
 \frametitle{Introduction}
-% \begin{beamerboxesrounded}[shadow=true]{Conséquences}
 \begin{itemize}
 % va à mon avis beaucoup évoluer avec les répétitions...
-	\item Evolution d'un code
+	\item Évolution d'un code
 	\item Refactoring
 	\item Librairies obsolètes
 \end{itemize}
-% \end{beamerboxesrounded}
 \end{frame}
 
 
