Decalage titre Installateur izPack

--- a/beamer/partie1.tex
+++ b/beamer/partie1.tex
@@ -80,6 +80,10 @@
 \end{minipage}
 \end{frame}
 %------------------------------------------------------------------------------
+\begin{frame}\frametitle{Principe d'IzPack}
+\includegraphics[width=1\linewidth]{../image/izpackInstall.png}
+\end{frame}
+%------------------------------------------------------------------------------
 \subsection{Problèmes}
 \begin{frame}\frametitle{Problèmes}
 	\begin{beamerboxesrounded}[shadow=true]{NanoXML obsolète}
