Image et taille

--- a/beamer/partie1.tex
+++ b/beamer/partie1.tex
@@ -81,7 +81,7 @@
 \end{frame}
 %------------------------------------------------------------------------------
 \begin{frame}\frametitle{Principe d'IzPack}
-\includegraphics[width=1\linewidth]{../image/izpackInstall.png}
+\includegraphics[height=1\textheight]{../image/izpackInstall.png}
 \end{frame}
 %------------------------------------------------------------------------------
 \subsection{Problèmes}
