--- a/beamer/conclusion.tex
+++ b/beamer/conclusion.tex
@@ -24,6 +24,6 @@ Merci de votre attention.
 %------------------------------------------------------------------------------
 \begin{frame}<beamer>\frametitle{Questions}
 \begin{center}
-Question?
+Questions?
 \end{center}
 \end{frame}
