correction après 1ère répétition

--- a/beamer/introduction.tex
+++ b/beamer/introduction.tex
@@ -6,6 +6,10 @@
 	\item Refactoring
 	\item Librairies obsolètes
 \end{itemize}
+\begin{itemize}
+	\item IzPack
+	\item JAXP
+\end{itemize}
 \end{frame}
 
 
