--- a/beamer/partie2.tex
+++ b/beamer/partie2.tex
@@ -29,10 +29,10 @@ Utilisations principales :
 \vfill
 \hfil
 \begin{minipage}[c]{.8\linewidth}
-\begin{beamerboxesrounded}[shadow=true]{Nouvelle librairie}
+\begin{beamerboxesrounded}[shadow=true]{Changement de librairie}
 \begin{itemize}
-	\item Utiliser une nouvelle librairie externe
-	\item Utiliser une librairie interne
+	\item Librairie externe (Xerces, JDOM, ...)
+	\item Librairie interne (JAXP)
 \end{itemize}
 \end{beamerboxesrounded}
 \end{minipage}
