--- a/beamer/conclusion.tex
+++ b/beamer/conclusion.tex
@@ -7,7 +7,9 @@
 	\item JAXP et ses avantages ajouté
 \end{itemize}
 \end{beamerboxesrounded}
-\vfill
+\end{frame}
+%------------------------------------------------------------------------------
+\begin{frame}<beamer>
 \begin{beamerboxesrounded}[shadow=true]{Contributeurs}
 \begin{itemize}
 	\item Suivi des apports
