--- a/beamer/partie3.tex
+++ b/beamer/partie3.tex
@@ -1,32 +1,40 @@
 \subsection{Environnement de travail}
-\begin{frame}\frametitle{Environnement de travail}
-\begin{minipage}[c]{.46\linewidth}
-	\begin{beamerboxesrounded}[shadow=true,center]{Gestionnaire de version}
-		\centering
-		\includegraphics[width=.4\linewidth]{../image/gitLogo.png}
-		\includegraphics[width=.3\linewidth]{../image/githubLogo.png}
+%------------------------------------------------------------------------------
+\begin{frame}\frametitle{Méthode agile}
+\centering
+\begin{minipage}[c]{.5\linewidth}
+	\begin{beamerboxesrounded}[shadow=true]{Gestion de projet}
+		\includegraphics[width=\linewidth]{../image/lighthouseLogo.png}
 	\end{beamerboxesrounded}
 \end{minipage}
-\hfill
-\begin{minipage}[c]{.46\linewidth}
-\begin{beamerboxesrounded}[shadow=true]{Gestion de projet}
-	\centering
-	\includegraphics[width=.7\linewidth]{../image/lighthouseLogo.png}
-\end{beamerboxesrounded}
-\end{minipage}
-\vfill
-\hfil
-\begin{minipage}[c]{.6\linewidth}
-\begin{beamerboxesrounded}[shadow=true]{Environnement de développement}
-	\centering
-	\includegraphics[width=.4\linewidth]{../image/intellijLogo.png}
-\end{beamerboxesrounded}
-\end{minipage}
-\end{frame}
-%------------------------------------------------------------------------------
-\begin{frame}\frametitle{Méthodologie agile}
 \vfill
 \includegraphics[width=1\linewidth]{../image/agileDev.png}
+\end{frame}
+%------------------------------------------------------------------------------
+\begin{frame}\frametitle{Environnement de travail}
+\begin{centering}
+	\begin{minipage}[c]{.6\linewidth}
+		\begin{beamerboxesrounded}[shadow=true,center]{Gestionnaire de version}
+			\centering
+			\includegraphics[width=.4\linewidth]{../image/gitLogo.png}\hfil
+		\end{beamerboxesrounded}
+	\end{minipage}
+	\vfill
+	\begin{minipage}[c]{.6\linewidth}
+		\begin{beamerboxesrounded}[shadow=true,center]{Hébergement de dépôt}
+			\centering
+			\includegraphics[width=.3\linewidth]{../image/githubLogo.png}
+		\end{beamerboxesrounded}
+	\end{minipage}
+	\vfill
+	\begin{minipage}[c]{.6\linewidth}
+		\begin{beamerboxesrounded}[shadow=true,center]{Environnement de développement}
+			\centering
+			\includegraphics[width=.4\linewidth]{../image/intellijLogo.png}
+		\end{beamerboxesrounded}
+	\end{minipage}
+	\vfill
+\end{centering}
 \end{frame}
 %------------------------------------------------------------------------------
 \subsection{Transition}
@@ -54,8 +62,9 @@
 \begin{minipage}[c]{\linewidth}
 \begin{beamerboxesrounded}[shadow=true]{Avantages}
 \begin{itemize}
-	\item conservation de l'interface de NanoXML
-	\item disparition de NanoXML
+	\item Changements minime
+	\item Conservation de l'interface de NanoXML
+	\item 
 \end{itemize}
 \end{beamerboxesrounded}
 \end{minipage}
@@ -65,26 +74,24 @@
 \subsection{Tests}
 \begin{frame}\frametitle{Tests effectués}
 \begin{minipage}[c]{.9\linewidth}
-\begin{beamerboxesrounded}[shadow=true]{Tests unitaires}
+Tests unitaires :
 \begin{itemize}
 	\item Assurent un comportement identique
 	\item Testent de nombreux cas
 \end{itemize}
-\end{beamerboxesrounded}
-\end{minipage}
-\vfill
-\begin{minipage}[c]{.9\linewidth}
-\begin{beamerboxesrounded}[shadow=true]{Tests fonctionnels}
-\begin{itemize}
-	\item IzPack
-	\item Glassfish
-\end{itemize}
-\end{beamerboxesrounded}
 \end{minipage}
 \end{frame}
 %------------------------------------------------------------------------------
-
-% pas sûr de l'utilité si seulement 2 items...
+\begin{frame}\frametitle{Installation de IzPack}
+	\centering
+	\includegraphics[width=\linewidth]{../image/installationIzpack.png}
+\end{frame}
+%------------------------------------------------------------------------------
+\begin{frame}\frametitle{Installation de Glassfish}
+	\centering
+	\includegraphics[width=\linewidth]{../image/installationGlassfish.png}
+\end{frame}
+%------------------------------------------------------------------------------
 \subsection{Principaux problèmes rencontrés}
 \begin{frame}\frametitle{Principaux problèmes rencontrés}
 Principaux problèmes rencontrés :
